--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio för Hullo">
+    <meta name="author" content="Hullo AB">
     <link rel="icon" href="favicon.ico">
 
-    <title>Portfolioo</title>
+    <title>Hullo - Web & Design</title>
 
     <!-- Icons for this template -->
     <link href="assets/fonts/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
@@ -19,34 +19,118 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-md navbar-light fixed-top">
+    <img src="assets/img/hullo_logo.png" class="navbar-brand">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#" title="Startsidan">Hem</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#" title="Portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="#" title="Nackademin">Nackademin</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" title="Kontakta">Kontakta</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<main role="main" class="container">
-    <div class="jumbotron text-center">
-        <img src="assets/img/logo.png"/>
-        <h1>Bootstrap 4 Starter Template</h1>
-        <p class="lead">This example is a quick bootstrap starter template.</p>
-        <a class="btn btn-lg btn-primary" href="https://getbootstrap.com/docs/4.5/getting-started/introduction/" role="button" target="_blank">View Bootstrap 4.5 Docs &raquo;</a>
+<div class="container-fluid start">
+    <h3>We create<span>websomeness</span></h3>
+</div>
+
+<div class="container-fluid portfolio-happy">
+    <div class="container">
+        <div class="row logo">
+            <img src="assets/img/portfolio/happy-logo.png">
+        </div>
+        <div class="row info">
+            <div class="col-12 col-md-6 my-auto">
+                <img src="assets/img/portfolio/happy-artwork.png">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
     </div>
-</main>
+</div>
+
+<div class="container-fluid portfolio-sheep">
+    <div class="container">
+        <div class="row logo">
+            <img src="assets/img/portfolio/sheep-logo.png">
+        </div>
+        <div class="row info">
+            <div class="col-12 col-md-6 my-auto">
+                <img src="assets/img/portfolio/sheep-artwork.png">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid portfolio-marmor">
+    <div class="container">
+        <div class="row logo">
+            <img src="assets/img/portfolio/marmor-logo.png">
+        </div>
+        <div class="row info">
+            <div class="col-12 col-md-6 my-auto">
+                <img src="assets/img/portfolio/marmor-artwork.png">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid portfolio-dealr">
+    <div class="container">
+        <div class="row logo">
+            <img src="assets/img/portfolio/dealr-logo.png">
+        </div>
+        <div class="row info">
+            <div class="col-12 col-md-6 my-auto">
+                <img src="assets/img/portfolio/dealr-artwork.png">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid portfolio-arena">
+    <div class="container">
+        <div class="row logo">
+            <img src="assets/img/portfolio/arena-logo.png">
+        </div>
+        <div class="row info">
+            <div class="col-12 col-md-6 my-auto">
+                <img src="assets/img/portfolio/arena-artwork.png">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid start">
+    <div class="container">
+         
+    </div>
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
