fixed navigation, styling added info nackademin

--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
-    <img src="assets/img/hullo_logo.png" class="navbar-brand">
+    <img src="assets/img/hullo_logo.png" class="navbar-brand" title="Hullo - Web & Design">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#" title="Startsidan">Hem</a>
+                <a class="nav-link" href="#hem" title="Startsidan">Hem</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" title="Portfolio">Portfolio</a>
+                <a class="nav-link" href="#portfolio" title="Portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" title="Nackademin">Nackademin</a>
+                <a class="nav-link" href="#nackademin" title="Nackademin">Nackademin</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" title="Kontakta">Kontakta</a>
+                <a class="nav-link" href="#kontakta" title="Kontakta">Kontakta</a>
             </li>
         </ul>
     </div>
 </nav>
 
-<div class="container-fluid start">
-    <h3>We create<span>websomeness</span></h3>
+<div class="container-fluid start" id="hem">
+    <h1 class="noselect">We create<span>websomeness</span></h1>
 </div>
 
-<div class="container-fluid portfolio-happy">
-    <div class="container">
+<div class="container-fluid portfolio-happy" id="portfolio">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/happy-logo.png">
+            <img src="assets/img/portfolio/happy-logo.png" class="fadeInRightBig" title="Happy Order">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/happy-artwork.png">
+                <img src="assets/img/portfolio/happy-artwork.png" title="Happy Order's app i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -63,13 +63,13 @@
 </div>
 
 <div class="container-fluid portfolio-sheep">
-    <div class="container">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/sheep-logo.png">
+            <img src="assets/img/portfolio/sheep-logo.png" title="Sheep Leap">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/sheep-artwork.png">
+                <img src="assets/img/portfolio/sheep-artwork.png" title="Sheep Leap spelar i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -79,13 +79,13 @@
 </div>
 
 <div class="container-fluid portfolio-marmor">
-    <div class="container">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/marmor-logo.png">
+            <img src="assets/img/portfolio/marmor-logo.png" title="Svensk Marmor">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/marmor-artwork.png">
+                <img src="assets/img/portfolio/marmor-artwork.png" title="Svensk Marmor's produktkatalog">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -95,13 +95,13 @@
 </div>
 
 <div class="container-fluid portfolio-dealr">
-    <div class="container">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/dealr-logo.png">
+            <img src="assets/img/portfolio/dealr-logo.png" title="Dealr - The game of saving">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/dealr-artwork.png">
+                <img src="assets/img/portfolio/dealr-artwork.png" title="Skärmdumpar från appen Dealr">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -111,13 +111,13 @@
 </div>
 
 <div class="container-fluid portfolio-arena">
-    <div class="container">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/arena-logo.png">
+            <img src="assets/img/portfolio/arena-logo.png" title="Min Arena">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/arena-artwork.png">
+                <img src="assets/img/portfolio/arena-artwork.png" title="Skärmdumpar av appen Min Arena">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -126,16 +126,42 @@
     </div>
 </div>
 
-<div class="container-fluid start">
+<div class="container-fluid end" id="nackademin">
     <div class="container">
-         
+        <div class="row logo">
+            <img src="assets/img/nackademin_logo.png" title="Nackademin">
+        </div>
+         <div class="row">
+            Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.
+        </div>
+        <div class="row" id="kontakta">
+            <div class="col-12 col-md-6 my-auto">
+                <form action="https://formspree.io/f/{form_id}" method="post">
+                    <label for="name">Namn</label>
+                    <input name="Name" id="name" type="text">
+                    <label for="tel">Mobilnummer</label>
+                    <input name="Tel" id="tel" type="text">
+                    <label for="email">Mejladress</label>
+                    <input name="Email" id="email" type="email">
+                    <button type="submit">Skicka</button>
+                </form>
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+                Hullo AB
+                Skagersvägen 20
+                120 38 Årsta
+
+                info@hullo.se
+                070-411 50 00
+            </div>
+        </div>
     </div>
 </div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/vendor/jquery.slim.min.js"></script>
+<script src="assets/js/vendor/jquery.min.js"></script>
 <script src="assets/js/vendor/popper.min.js"></script>
 <script src="assets/js/vendor/bootstrap.min.js"></script>
 <!-- build:js -->
