--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 <div class="container-fluid portfolio-happy" id="portfolio">
     <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/happy-logo.png" class="fadeInRightBig" title="Happy Order">
+            <img src="assets/img/portfolio/happy-logo.webp" class="fadeInRightBig" title="Happy Order">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/happy-artwork.png" title="Happy Order's app i en mobiltelefon">
+                <img src="assets/img/portfolio/happy-artwork.webp" title="Happy Order's app i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -65,11 +65,11 @@
 <div class="container-fluid portfolio-sheep">
     <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/sheep-logo.png" title="Sheep Leap">
+            <img src="assets/img/portfolio/sheep-logo.webp" title="Sheep Leap">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/sheep-artwork.png" title="Sheep Leap spelar i en mobiltelefon">
+                <img src="assets/img/portfolio/sheep-artwork.webp" title="Sheep Leap spelar i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -81,11 +81,11 @@
 <div class="container-fluid portfolio-marmor">
     <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/marmor-logo.png" title="Svensk Marmor">
+            <img src="assets/img/portfolio/marmor-logo.webp" title="Svensk Marmor">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/marmor-artwork.png" title="Svensk Marmor's produktkatalog">
+                <img src="assets/img/portfolio/marmor-artwork.webp" title="Svensk Marmor's produktkatalog">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -97,11 +97,11 @@
 <div class="container-fluid portfolio-dealr">
     <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/dealr-logo.png" title="Dealr - The game of saving">
+            <img src="assets/img/portfolio/dealr-logo.webp" title="Dealr - The game of saving">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/dealr-artwork.png" title="Skärmdumpar från appen Dealr">
+                <img src="assets/img/portfolio/dealr-artwork.webp" title="Skärmdumpar från appen Dealr">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -113,11 +113,11 @@
 <div class="container-fluid portfolio-arena">
     <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/portfolio/arena-logo.png" title="Min Arena">
+            <img src="assets/img/portfolio/arena-logo.webp" title="Min Arena">
         </div>
         <div class="row info">
             <div class="col-12 col-md-6 my-auto">
-                <img src="assets/img/portfolio/arena-artwork.png" title="Skärmdumpar av appen Min Arena">
+                <img src="assets/img/portfolio/arena-artwork.webp" title="Skärmdumpar av appen Min Arena">
             </div>
             <div class="col-12 col-md-6 my-auto">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
