--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 </head>
 
-<body>
+<body style="display:none;">
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <img src="assets/img/hullo_logo.png" class="navbar-brand" title="Hullo - Web & Design">
