added portfolio links and video preview

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                 <img src="assets/img/portfolio/happy-artwork.webp" title="Happy Order's app i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="http://l.ead.me/bbFhPj" target="_blank" class="btn btn-primary">
+                    <span class="fas fa-mobile-alt" aria-hidden="true"></span> Ladda ner appen
+                </a>
             </div>
         </div>
     </div>
@@ -73,7 +76,16 @@
                 <img src="assets/img/portfolio/sheep-artwork.webp" title="Sheep Leap spelar i en mobiltelefon">
             </div>
             <div class="col-12 col-md-6 my-auto">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <!--
+                <button class="btn btn-primary">
+                    <span class="fab fa-youtube" aria-hidden="true"></span> Gameplay video
+                </button>
+                -->
+                <a class="btn btn-primary video-btn" data-toggle="modal" data-src="https://www.youtube.com/embed/STtyCDN27MI" data-target="#myModal">
+                    <span class="fab fa-youtube" aria-hidden="true"></span> Gameplay video
+                </a>
+                <!--https://youtu.be/STtyCDN27MI-->
             </div>
         </div>
     </div>
@@ -89,7 +101,10 @@
                 <img src="assets/img/portfolio/marmor-artwork.webp" title="Svensk Marmor's produktkatalog">
             </div>
             <div class="col-12 col-md-6 my-auto">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a class="btn btn-primary" target="_blank" href="https://www.dropbox.com/s/xd9g3pj9vx58nf1/SvenskMarmorProduktkatalog.pdf?dl=0">
+                    <span class="fas fa-file-pdf" aria-hidden="true"></span> Ladda ner produktkatalogen (95mb)
+                </a>
             </div>
         </div>
     </div>
@@ -105,7 +120,7 @@
                 <img src="assets/img/portfolio/dealr-artwork.webp" title="Skärmdumpar från appen Dealr">
             </div>
             <div class="col-12 col-md-6 my-auto">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
     </div>
@@ -121,7 +136,7 @@
                 <img src="assets/img/portfolio/arena-artwork.webp" title="Skärmdumpar av appen Min Arena">
             </div>
             <div class="col-12 col-md-6 my-auto">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
     </div>
@@ -133,7 +148,7 @@
             <img src="assets/img/nackademin_logo.png" title="Nackademin">
         </div>
          <div class="row">
-            Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.
+            <p>Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.</p>
         </div>
         <div class="row" id="kontakta">
             <div class="col-12 col-md-6 my-auto">
@@ -158,6 +173,26 @@
         </div>
     </div>
 </div>
+
+
+
+<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
+                        allow="autoplay"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
