--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col-12 col-md-6 my-auto">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a href="http://l.ead.me/bbFhPj" target="_blank" class="btn btn-primary">
+                <a class="btn btn-primary" target="_blank" rel="noopener" href="http://l.ead.me/bbFhPj">
                     <span class="fas fa-mobile-alt" aria-hidden="true"></span> Ladda ner appen
                 </a>
             </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="col-12 col-md-6 my-auto">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a class="btn btn-primary" target="_blank" href="https://www.dropbox.com/s/xd9g3pj9vx58nf1/SvenskMarmorProduktkatalog.pdf?dl=0">
+                <a class="btn btn-primary" target="_blank" rel="noopener" href="https://www.dropbox.com/s/xd9g3pj9vx58nf1/SvenskMarmorProduktkatalog.pdf?dl=0">
                     <span class="fas fa-file-pdf" aria-hidden="true"></span> Ladda ner produktkatalogen (95mb)
                 </a>
             </div>
