trying to defer css with gulp

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <title>Hullo - Web & Design</title>
 
-    <!-- Icons for this template -->
+    <!-- build:fa -->
     <link href="assets/fonts/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
-    <!-- Stylesheet -->
+    <!-- endbuild -->
     <!-- build:css -->
     <link href="assets/css/app.css" rel="stylesheet">
     <!-- endbuild -->
