--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body style="display:none;">
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
-    <img src="assets/img/hullo_logo.png" class="navbar-brand" title="Hullo - Web & Design">
+    <img src="assets/img/hullo_logo.webp" class="navbar-brand" title="Hullo - Web & Design">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -145,7 +145,7 @@
 <div class="container-fluid end" id="nackademin">
     <div class="container">
         <div class="row logo">
-            <img src="assets/img/nackademin_logo.png" title="Nackademin">
+            <img src="assets/img/nackademin_logo.webp" title="Nackademin">
         </div>
          <div class="row">
             <p>Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.</p>
