--- a/index.html
+++ b/index.html
@@ -141,32 +141,27 @@
 </div>
 
 <div class="container-fluid end" id="nackademin">
-    <div class="container">
+    <div class="container fade-in-section">
         <div class="row logo">
-            <img src="assets/img/nackademin_logo.webp" title="Nackademin">
-        </div>
-         <div class="row">
-            <p>Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.</p>
+            <div class="col-12">
+                <img src="assets/img/nackademin_logo.webp" title="Nackademin">
+            </div>
+            <div class="col-12 text-center">
+                <p>Nackademins utbildning Webbutvecklare fullstack open source ger en bred programmeringskompetens inom både backend samt frontend. Vi lär oss skapa moderna och interaktiva webbapplikationer i bland annat NodeJS, PHP och JavaScript för komplexa miljöer med hänsyn till prestanda och stora datamängder. Utöver detta lär vi oss även att arbeta på ett lösningsorienterat sätt, både självständigt och i agila utvecklingsteam, allt från kodning till implementation.</p>
+            </div>
         </div>
         <div class="row" id="kontakta">
-            <div class="col-12 col-md-6 my-auto">
-                <form action="https://formspree.io/f/{form_id}" method="post">
-                    <label for="name">Namn</label>
-                    <input name="Name" id="name" type="text">
-                    <label for="tel">Mobilnummer</label>
-                    <input name="Tel" id="tel" type="text">
-                    <label for="email">Mejladress</label>
-                    <input name="Email" id="email" type="email">
-                    <button type="submit">Skicka</button>
-                </form>
-            </div>
-            <div class="col-12 col-md-6 my-auto">
-                Hullo AB
-                Skagersvägen 20
-                120 38 Årsta
+            <div class="col-12 text-center">
+                <h2>Kontakta oss</h2>
+                <p>Hullo AB<br>
+                Skagersvägen 20<br>
+                120 38 Årsta</p>
 
-                info@hullo.se
-                070-411 50 00
+                <a class="clearfix" href="mailto:info@hullo.se" title="Mejla oss">info@hullo.se</a>
+                <a class="clearfix" href="tel:+4670-411 50 00" title="Ring oss">070-411 50 00</a>
+
+                <a class="icons" target="_blank" rel="noopener" href="https://www.linkedin.com/in/rikard-bjerkenius-2802a4b6/"><i class="fab fa-linkedin"></i></a>
+                <a class="icons" target="_blank" rel="noopener" href="https://github.com/hullo-rikard/"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
     </div>
