added link titles

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                 <a class="clearfix" href="mailto:info@hullo.se" title="Mejla oss">info@hullo.se</a>
                 <a class="clearfix" href="tel:+4670-411 50 00" title="Ring oss">070-411 50 00</a>
 
-                <a class="icons" target="_blank" rel="noopener" href="https://www.linkedin.com/in/rikard-bjerkenius-2802a4b6/"><i class="fab fa-linkedin"></i></a>
-                <a class="icons" target="_blank" rel="noopener" href="https://github.com/hullo-rikard/"><i class="fab fa-github-square"></i></a>
+                <a class="icons" target="_blank" rel="noopener" title="Besök Rikard's LinkedIn-profil" href="https://www.linkedin.com/in/rikard-bjerkenius-2802a4b6/"><i class="fab fa-linkedin"></i></a>
+                <a class="icons" target="_blank" rel="noopener" title="Besök Rikard's GitHub-profil" href="https://github.com/hullo-rikard/"><i class="fab fa-github-square"></i></a>
             </div>
         </div>
     </div>
