--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hullo AB">
     <link rel="icon" href="favicon.ico">
 
-    <title>Hullo - Web & Design</title>
+    <title>Hullo - Web & Designbyrå</title>
 
     <link href="assets/fonts/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- build:css -->
