made some w3c fixes

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 120 38 Årsta</p>
 
                 <a class="clearfix" href="mailto:info@hullo.se" title="Mejla oss">info@hullo.se</a>
-                <a class="clearfix" href="tel:+4670-411 50 00" title="Ring oss">070-411 50 00</a>
+                <a class="clearfix" href="tel:+46704115000" title="Ring oss">070-411 50 00</a>
 
                 <a class="icons" target="_blank" rel="noopener" title="Besök Rikard's LinkedIn-profil" href="https://www.linkedin.com/in/rikard-bjerkenius-2802a4b6/"><i class="fab fa-linkedin"></i></a>
                 <a class="icons" target="_blank" rel="noopener" title="Besök Rikard's GitHub-profil" href="https://github.com/hullo-rikard/"><i class="fab fa-github-square"></i></a>
@@ -177,8 +177,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="" id="video" allowscriptaccess="always"
-                        allow="autoplay"></iframe>
+                    <iframe class="embed-responsive-item" id="video" allow="autoplay"></iframe>
                 </div>
             </div>
         </div>
